--- a/sketch_211019paint/第五次作业说明.md
+++ b/sketch_211019paint/第五次作业说明.md
@@ -1,6 +1,8 @@
-#第五次作业：创意编程元素：图像/交互
+# 第五次作业：创意编程元素：图像/交互
 
-创意内容：圆点笔刷，每个圆的大小随机，可通过左上角的按钮更改红色、不透明度和笔刷最大的大小。
+创意内容：圆点笔刷，每个圆的大小随机，可通过左上角的方形按钮更改笔刷的红色、不透明度和圆的最大大小。
+
+方形按钮右边有标注实时数据信息
 ***
 绘制效果图：
 ![图片1](https://user-images.githubusercontent.com/90952715/137900483-d137ab49-409b-4dd1-b41c-b48d898a7d90.png)
