--- a/第四次作业/第四次作业说明.md
+++ b/第四次作业/第四次作业说明.md
@@ -8,9 +8,15 @@
 ## 结构设计说明
 
 1.在程序中输入一句由英文字母及标点组成的语句(s)。
+
 2.程序运行后所展现的画面分为上中下三个部分：
+
 上：(s)中每一个字母将会出现在同一水平行的随机位置。
-中：分布有28个点位，对应键盘的26个字母键以及逗号和句号。每提取(s)中的一个字母元素，将会在该字母对应的“键盘点位”生成一个半径随机的半透明圆。当程序全部运行完一轮之后，每个点位有多少个同心圆，则表示该点位在输入时敲击了几下。
+
+中：分布有28个点位，对应键盘的26个字母键以及逗号和句号。每提取(s)中的一个字母元素，将会在该字母对应的“键盘点位”生成一个半径随机的半透明圆。
+
+当程序全部运行完一轮之后，每个点位有多少个同心圆，则表示该点位在输入时敲击了几下。
+
 下：文字提示(note)（每单机一次鼠标，内容效果将产生不同）
 
 
