--- a/第二次作业/第二次作业说明.md
+++ b/第二次作业/第二次作业说明.md
@@ -1,3 +1,17 @@
 # 第二次作业：创意编程的结构模式-创意编程工具
 
-创意说明：
+## 创意说明
+
+利用随机函数，无限生成方形。
+
+生成的方形大小随机，生成位置位于距离前一个方形生成位置一定范围内的随机位置，颜色为一定区间内的随机颜色。
+
+控制方形绘制位置始终在显示区域内。
+
+每次运行程序将得到独一无二的结果，永远无法预测下一秒的方形路径走向，为观赏带来乐趣。
+
+可以在运行到一定时间时截取页面内容作为设计背景元素。
+
+
+## 运行示例
+
