--- a/第二次作业/第二次作业说明.md
+++ b/第二次作业/第二次作业说明.md
@@ -13,5 +13,10 @@
 可以在运行到一定时间时截取页面内容作为设计背景元素。
 
 
-## 运行示例
+## 运行效果
 
+![微信图片_20211019195531](https://user-images.githubusercontent.com/90952715/137905735-d129f09e-f59e-4cc1-bee9-1220508ad382.png)
+
+![微信图片_20211019195706](https://user-images.githubusercontent.com/90952715/137905766-6e203192-7f1e-4cbc-97ca-5948bdd6624e.png)
+
+![微信图片_20211019200058](https://user-images.githubusercontent.com/90952715/137905792-eb4cec49-6dfe-4b36-a38f-d193b08c7712.png)
