--- a/第三次作业/第三次作业说明.md
+++ b/第三次作业/第三次作业说明.md
@@ -15,6 +15,6 @@
 
 ![微信图片_20211019201554](https://user-images.githubusercontent.com/90952715/137907316-363da206-9695-4aac-9045-f49daa5a4a18.png)
 
-![Uploading 微信图片_20211019201602.png…]()
+![微信图片_20211019201602](https://user-images.githubusercontent.com/90952715/137907456-8236c163-444f-4a5a-9adb-57d150e75304.png)
 
-![Uploading 微信图片_20211019201606.png…]()
+![微信图片_20211019201606](https://user-images.githubusercontent.com/90952715/137907474-3562104a-6721-4beb-8182-4fb7e1ad2f70.png)
