--- a/第六次作业/第六次作业说明.md
+++ b/第六次作业/第六次作业说明.md
@@ -1,2 +1,15 @@
-# 第六次作业说明
+# 第六次作业：创意编程研究：自组织与涌现性作业
 
+## 创意说明
+
+*建立一个不断自主运动的粒子系统。每个粒子都有固定定的生命周期，寿命随运行次数增加而减少。同时有新的粒子不断产生，达到更迭的效果。新粒子的出现位置随机。
+
+*在粒子的位置画色彩不断随机变化的圆。圆的透明度随寿命减少而减小。
+
+*运用向量，使得每个粒子都时刻受到大小随机的向下的力以及轻微的方向随机的向左右两侧的力的作用而产生运动。其中向下的力随运行次数的增加而变大。
+
+*交互：使每个粒子受到来自于鼠标位置的吸引力的作用，在向下运动的同时被鼠标吸引。
+
+## 效果视频
+
+见本次作业文件夹
