--- a/第七次作业/第七次作业说明.md
+++ b/第七次作业/第七次作业说明.md
@@ -1,1 +1,17 @@
 # [第七次作业：创意编程研究：复杂性｜自相似与分形]作业：自相似与分形
+
+## 创意说明：
+
+* 学习自相似与分形后，在分形树的基础上增加了树枝粗细的改变以及通过鼠标移动而决定的树的灰度的改变；
+
+* 当鼠标水平方向移动时，分形树的树枝生长角度发生变化；当鼠标竖直方向移动时，分形树的灰度发生变化。通过鼠标不同的移动路径可产生更丰富的效果，互动性得到增强。
+
+* 设置了树枝的粗细b,每分形一次，b将减半，使得分形树的形态更接近自然界中树的形态。
+
+## 效果展示：
+
+* 视频动态效果见文件夹内[movie1]文件
+
+![图片1](https://user-images.githubusercontent.com/90952715/140635774-58630d49-658a-4ef6-8630-502a1d8b543c.jpg)
+
+![图片3](https://user-images.githubusercontent.com/90952715/140635942-ec41926d-4cae-41c9-a960-a20f577ed5d7.jpg)
