--- a/[第九次作业：大作业｜自拟课程设计项目]设计工具软件开发/大作业计划书.md
+++ b/[第九次作业：大作业｜自拟课程设计项目]设计工具软件开发/大作业计划书.md
@@ -5,7 +5,8 @@
 
 ## 灵感阐述
 
-    线和面是设计中基础却常用的元素，横竖交错的直线构成了神奇的网格。生活中，我们随处可见网格，在版面排布中，遵循网格系统进行布局，能使得整个版面的不同元素达到协调的效果。服装上也常见各类格纹样式，格纹通过不同的线条样式、粗细、颜色等，能够构造出不同的效果。因此，我希望开发出一款能够随机生成格纹的软件，为平面设计带来配色布局等方面的灵感，也可以直接作为一种元素运用到平面设计中。
+    线和面是设计中基础却常用的元素，横竖交错的直线构成了神奇的网格。生活中，我们随处可见网格，在版面排布中，遵循网格系统进行布局，能使得整个版面的不同元素达到协调的效果。服装上也常见各类格纹样式，格纹通过不同的线条样式、粗细、颜色等，能够构造出不同的效果。
+    因此，我希望开发出一款能够随机生成格纹的软件，为平面设计带来配色布局等方面的灵感，也可以直接作为一种元素运用到平面设计中。
     
     
 ## 软件功能
@@ -22,7 +23,7 @@
 
 ## 效果展示
 
-1.同色不同纹样
+### 1.同色不同纹样
 
 ![picture-3569](https://user-images.githubusercontent.com/90952715/142731811-1d0e9107-7d37-4131-b40e-1fc5e170e11c.png)
 
@@ -31,7 +32,7 @@
 ![picture-3338](https://user-images.githubusercontent.com/90952715/142731833-b6016e28-4426-4248-8159-7e7c934dfd53.png)
 
 
-2.同纹样不同色
+### 2.同纹样不同色
 
 ![picture-2858](https://user-images.githubusercontent.com/90952715/142731846-4b73258f-d9e4-4951-a00f-603b75970b66.png)
 
