--- a/[第九次作业：大作业｜自拟课程设计项目]设计工具软件开发/大作业计划书.md
+++ b/[第九次作业：大作业｜自拟课程设计项目]设计工具软件开发/大作业计划书.md
@@ -5,7 +5,10 @@
 
 ## 灵感阐述
 
-    线和面是设计中基础却常用的元素，横竖交错的直线构成了神奇的网格。生活中，我们随处可见网格，在版面排布中，遵循网格系统进行布局，能使得整个版面的不同元素达到协调的效果。服装上也常见各类格纹样式，格纹通过不同的线条样式、粗细、颜色等，能够构造出不同的效果。
+    线和面是设计中基础却常用的元素，横竖交错的直线构成了神奇的网格。
+    
+    生活中，我们随处可见网格，在版面排布中，遵循网格系统进行布局，能使得整个版面的不同元素达到协调的效果。服装上也常见各类格纹样式，格纹通过不同的线条样式、粗细、颜色等，能够构造出不同的效果。
+    
     因此，我希望开发出一款能够随机生成格纹的软件，为平面设计带来配色布局等方面的灵感，也可以直接作为一种元素运用到平面设计中。
     
     
